crates/strider/tests/snapshots/arm__control__early_return.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v7" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v7" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v11" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v11" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" -> "12" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "16" -> "12" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "17" -> "12" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "17" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "18" -> "v11" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v19" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "18" -> "v19" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" -> "18" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "22" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v23" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "22" -> "v23" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v24" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "22" -> "v24" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v19" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "25" -> "22" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "20" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v7" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v24" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v23" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "15" -> "26" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "16" -> "26" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "17" -> "26" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="φ r0", shape=house, fillcolor="#163030"];
  "20" -> "28" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "27" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" [label="φ r0", shape=house, fillcolor="#163030"];
  "5" -> "30" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "32" -> "30" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "33" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0xfffffffa:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "36" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "42" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "44" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "46" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "38" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "44" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
}
