crates/strider/tests/snapshots/arm__control__factorial.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v6" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v8" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "7" -> "v6" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ r0", shape=house, fillcolor="#163030"];
  "5" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "12" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="φ r3", shape=house, fillcolor="#163030"];
  "5" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "20" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v2" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "25" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "14" -> "25" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "15" -> "25" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "27" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "29" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "23" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "34" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "35" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
